--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Sample Web App
 
 on:
   # Triggers the workflow on push
-  push:
+  # push:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
